# mattslair-foundation-in-c-linuxmint

./: .gitignore  CMakeLists.txt  README.md  build.sh
debian/: changelog  control  copyright  rules
src/: main.c
